[project]
name = "model-quantization-comparison"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "immutabledict>=4.3.1",
    "langdetect>=1.0.9",
    "lm-eval[hf]>=0.4.11",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]

[project.optional-dependencies]
cuda = ["bitsandbytes>=0.49.2"]
mps = ["optimum-quanto>=0.2.0"]
